[package]
name = "cli"
version = "0.1.0"
authors = ["shivshank"]
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"
publish = false

[dependencies]
clap = "4.3.9"
serde = { version = "1.0.66", features = ["derive"] }
serde_json = "1.0.20"
toml = { version = "0.8.1", default-features = false, features = ["parse", "display"] }
crates_io_api = "0.8.1"
reqwest = "0.11.20"
